# pharox-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/rules/: sdk.md
.github/workflows/: ci.yml  release.yml
src/pharox_sdk/: __init__.py  client.py  exceptions.py  sdk.py
tests/: conftest.py  test_client.py  test_sdk_local.py  test_sdk_remote.py
